fix pixel size gap

--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ footer h4 {
   }
 }
 
-@media screen and (min-width 1700px) {
+@media screen and (min-width: 1700px) {
   html {
     --header1: 3rem;
     --header2: 5rem;
